Remove references to Guava Function and Predicate